# SEALDemo

./: CMakeLists.txt  sealdemo_millionaire.cpp  sealdemo_performance.cpp
